make keyspace configurable

--- a/resources/solandra.properties
+++ b/resources/solandra.properties
@@ -29,6 +29,8 @@ solandra.shards.at.once = 4
 #before forcing a commit.
 solandra.write.buffer.queue.size = 16
 
+#keyspace name for solandra
+solandra.keyspace = L
 
 #The number of retries solandra will attempt before 
 #failing a write or read (TimeoutException)
