Change document metata serialization to use thrift serialization'

--- a/build.xml
+++ b/build.xml
@@ -33,6 +33,9 @@
 
 	<property name="app" location="solandra-app" />
 	<property name="resources" location="resources" />
+	
+	<property name="autogen" location="auto-gen" />
+	<property name="autogen.thrift.dir" location="${autogen}/thrift" />
 
 	<!-- ivy properties -->
 	<property name="ivy.version" value="2.2.0" />
@@ -51,6 +54,7 @@
 		<mkdir dir="${ivy.dir}" />
 		<mkdir dir="${ivy.lib.dir}" />
 		<mkdir dir="${app}" />
+		<mkdir dir="${autogen.thrift.dir}" />
 		<!--
               Allow Ivy to be disabled with "-Dnoivy=".
               It is kind of a hack to pretend that we already found it,
@@ -130,6 +134,7 @@
 	<target name="compile" depends="init,resolve">
 	  <javac debug="true" destdir="${build.classes}">
 	    <src path="${src}" />
+	  	<src path="${autogen.thrift.dir}/gen-java"/>
 	    <classpath refid="solandra.classpath" />
 	  </javac>
 	</target>
@@ -168,6 +173,7 @@
 		<delete dir="${build}" />
 		<delete dir="${lib}" />
 		<delete dir="${app}" />
+		<delete dir="${autogen}" />
 		<delete file="solandra.jar" />
 		<delete file="solandra-tests.jar" />
 		<delete file="solandra.war" />
@@ -274,4 +280,14 @@
       <echo>Start the cassandra server with ${cassandra}/bin/solandra command</echo>
       
     </target>
+	
+	<!-- Generate thrift code.-->
+	<target name="gen-thrift-java" description="Generate Thrift Java artifacts">
+		<echo>Generating Thrift Java code from ${basedir}/schema/thrift/lucandra.thrift ....</echo>
+	    <exec executable="thrift" dir="${basedir}/schema" failonerror="true">
+	        <arg line="--gen java:hashcode" />
+	        <arg line="-o ${autogen.thrift.dir}" />
+	        <arg line="lucandra.thrift" />
+	     </exec>	    
+	</target>
 </project>
