--- a/build.xml
+++ b/build.xml
@@ -228,7 +228,7 @@
 
 		<echo>Solandra successfully built</echo>
 		<echo>You can excute the following command to start the server.</echo>
-		<echo>cd ${app}; start-solandra.sh -b</echo>
+		<echo>cd ${app}; start-solandra.sh</echo>
 	</target>
 
 
