Added field compression with config setting

--- a/resources/solandra.properties
+++ b/resources/solandra.properties
@@ -1,3 +1,8 @@
+
+#Set to true if you want solandra to compress fields + meta data
+#This will size on disk at the cost of indexing speed
+solandra.compression = false
+
 #The consistency level of solandra reads and writes
 solandra.consistency = ONE
 
