added index id expiration time as a property

--- a/resources/solandra.properties
+++ b/resources/solandra.properties
@@ -24,6 +24,10 @@ solandra.maximum.docs.per.shard = 131072
 #*NOTE* this value must be a power of 2
 solandra.index.id.reserve.size = 16384
 
+#expiration time for reserved index ids
+#*NOTE* in seconds
+solandra.index.id.expirationtime = 120
+
 #The number of shards to write to at once
 #This should roughly equal the number of 
 #nodes in your cluster
