--- a/ivy.xml
+++ b/ivy.xml
@@ -27,11 +27,14 @@
     <dependency org="commons-cli" name="commons-cli" rev="1.1" conf="* -> *,!sources,!javadoc"/>
     <dependency org="commons-lang" name="commons-lang" rev="2.4" conf="* -> *,!sources,!javadoc"/>
     <dependency org="commons-collections" name="commons-collections" rev="3.2.1" conf="* -> *,!sources,!javadoc"/>
-    <dependency org="org.apache.lucene" name="lucene-core" rev="2.9.3" conf="*"/>
-    <dependency org="org.apache.solr" name="solr-core" rev="1.4.1" conf="* -> *,!javadoc"/>
-    <dependency org="org.mortbay.jetty" name="jetty" rev="6.1.6" conf="* -> *,!sources,!javadoc" />
-    <dependency org="org.mortbay.jetty" name="jetty-util" rev="6.1.6" conf="* -> *,!sources,!javadoc" />
-    <dependency org="org.mortbay.jetty" name="jsp-2.1" rev="6.1.6" conf="* -> *,!sources,!javadoc" />
+    <dependency org="org.apache.solr" name="solr-core" rev="3.1.0" conf="* -> *,!javadoc">
+      <exclude org="org.mortbay.jetty"/> 
+      <exclude org="org.slf4j"/>
+    </dependency>
+
+    <dependency org="org.mortbay.jetty" name="jetty" rev="6.1.26" conf="* -> *,!sources,!javadoc" />
+    <dependency org="org.mortbay.jetty" name="jetty-util" rev="6.1.26" conf="* -> *,!sources,!javadoc" />
+    <dependency org="org.mortbay.jetty" name="jsp-2.1" rev="6.1.14" conf="* -> *,!sources,!javadoc" />
 
     <dependency org="org.apache.cassandra" name="cassandra-all" rev="0.7.4" conf="* -> *,!sources,!javadoc" />
     <dependency org="net.java.dev.jna" name="jna" rev="3.2.7" conf="* -> *,!sources,!javadoc" />
